--- a/writeup/AnhLe_proposal.tex
+++ b/writeup/AnhLe_proposal.tex
@@ -66,8 +66,11 @@
 \input{preliminary_evidence}
 \input{anecdote}
 
+\section{Roadmap}
+\input{roadmap}
+
 \section{Theory}
-\input{trade_off}
+\input{theory}
 
 \section{Research Design}
 \input{measuring_spillover}
