--- a/writeup/rd_potential_for_spillover.tex
+++ b/writeup/rd_potential_for_spillover.tex
@@ -1,15 +1,15 @@
-\subsection{``Price'' of spillover: sectoral variation in potential for spillover}
+\subsection{Project 1: ``Price'' of spillover---industry variation in potential for spillover}
 
-As implied in the theory section, when the ``price'' of spillover is high (i.e. it is difficult to obtain spillover due to the country's absorptive capacity or sector-specific characteristics), the government official would choose a bundle that has more private benefit than spillover (\Cref{fig:price_of_spillover}). 
+As implied in \Cref{sec:theory_budget_constraint_slope_and_intercept}, when the ``price'' of spillover is high (i.e. it is difficult to obtain spillover due to the host country's absorptive capacity or sector-specific characteristics), the official would choose a bundle that has more private benefits than spillover (\Cref{fig:price_of_spillover}). 
 
 \begin{figure}[!ht]
 	\centering
     \includegraphics[width=0.75\textwidth, height=0.75\textheight,keepaspectratio]{../figure/price_of_spillover}
-    \caption{As the ``price'' of spillover decreases, the official can get a larger amount of spillover given the same budget (i.e. the y-intercept of the budget constraint shifts up) Comparing the bundle $(s_1, b_1)$ and $(s_2, b_2)$, we see that the new bundle has more spillover and fewer bribes.}
+    \caption{As the ``price'' of spillover decreases, the official can get a larger amount of spillover given the same budget (i.e. the y-intercept of the budget constraint shifts up). Comparing the bundle $(b_1, s_1)$ and $(b_2, s_2)$, we see that the new bundle has more spillover and fewer bribes.}
     \label{fig:price_of_spillover}
 \end{figure}
 
-Here I focus on industry-specific characteristics that either facilitate or hinder spillover.\footnote{Absorptive capacity, or the ability of private firms to learn from their interaction with foreign firms, is also a very important factor in determining spillover. However, given the time-varying nature of absorptive capacity, not to mention the fact that official and firms can strategically invest to improve absorptive capacity, it is much harder to have a research design studying absorptive capacity that can claim exogeneity.} Due to the divisibility of its production process, manufacturing firms tend to engage more local suppliers and generate more spillover effect than primary and tertiary sectors. In addition, within each sector there is a wide variation across industries to be exploited as well. For example, in manufacturing, food processing can have a high amount of spillover due to the sourcing of raw materials and packaging, whereas in textile and automotive industries (which require high level of technological sophistication), it is harder for foreign firms to work with local suppliers. Similarly, in tertiary sectors, finance, trading, tourisms and utilities are is generally not divisible into discrete stages to subcontract. Yet service industries such as retailing and construction have more opportunities for input suppliers \citep[138]{UNCTAD2001}.
+Here I focus on industry-specific characteristics that either facilitate or hinder spillover.\footnote{Absorptive capacity, or the ability of private firms to learn from their interaction with foreign firms, is also a very important factor in determining spillover. However, given the time-varying nature of absorptive capacity, not to mention the fact that official and domestic firms can strategically invest to improve absorptive capacity, it is much harder to have a research design studying absorptive capacity that claims exogeneity.} Having a divisible production process, manufacturing firms tend to engage more local suppliers and generate more spillover than firms in the primary and tertiary sectors. In addition, within each sector there is a wide variation across industries to be exploited as well. For example, in manufacturing, food processing can have a high level of spillover due to the sourcing of raw materials and packaging, whereas in textile and automotive industries, it is harder for foreign firms to work with local suppliers due the high level of technical sophistication. Similarly, in the tertiary sector, finance, trading, tourisms and utilities are is generally not divisible into discrete stages to subcontract. Yet service industries such as retailing and construction have more opportunities for input suppliers \citep[138]{UNCTAD2001}.
 
 This leads us to the following hypothesis:
 
