almost done, fixing typos now

--- a/writeup/AnhLe_proposal.tex
+++ b/writeup/AnhLe_proposal.tex
@@ -70,9 +70,11 @@
 \input{roadmap}
 
 \section{Theory}
+\label{sec:theory}
 \input{theory}
 
 \section{Research Design}
+\label{sec:research_design}
 \input{measuring_spillover}
 \input{rd_potential_for_spillover}
 \input{rd_private_benefit}
@@ -80,6 +82,7 @@
 \input{rd_two_sided_matching}
 
 \section{Time Line}
+\label{sec:time_line}
 \input{time_line}
 
 \appendix
