--- a/writeup/rd_time_horizon.tex
+++ b/writeup/rd_time_horizon.tex
@@ -1,20 +1,20 @@
-\subsection{Time horizon of officials}
+\subsection{Project 3---time horizon of officials}
 
-As implied by the theory above, an official with a longer time horizon would choose a bundle with more spillover, whereas an official with a short time horizon would choose a bundle with more private benefit.
+As discussed in \Cref{sec:theory_indifference_curve}, an official with a longer time horizon would choose a bundle with more spillover, whereas an official with a shorter time horizon would choose a bundle with more private benefits.
 
-To get a handle on the time horizon of the official, we need to know the options provided to the official within the country's political economic system. Such is a difficult question to study with a cross-national design due to endogeneity issues, stemming from unobservable and unmeasurable differences across political systems. Therefore, at this step, I focus on the case of Vietnam, whose large number of provincial units (63) and their variation in FDI flow serve as an excellent testing ground. Again, here I focus on bribe and informal fees as the main form of private benefit for officials. Such constraint is not problematic for the case of Vietnam, where the authoritarian system means that officials are not offered campaign contribution and where revolving door jobs are non-existent.
+To get a handle on the time horizon of the official, we need to know the options provided to the official within the country's political economic system. Such is a difficult question to study with a cross-national design due to endogeneity issues, stemming from unobservable and unmeasurable differences across political systems. Therefore, at this step, I focus on the case of Vietnam, whose large number of provincial units (63) and their variation in FDI flow serve as an excellent testing ground. Again, here I focus on bribe and informal fees as the main form of private benefit for officials. Such constraint is not problematic for the case of Vietnam, where there is no campaign contribution and revolving door jobs are non-existent.
 
 \subsubsection{The effect of time horizon on the choice of Vietnamese provincial officials} 
 
 The relative weight assigned to spillover versus bribe by the Vietnamese provincial officials is determined by the principal-agent relationship between Vietnam's central and the provincial governments. On the one hand, the central government (i.e. the principal) cares more about the spillover effect of FDI and uses promotion to reward local officials that attract high-spillover FDI. On the other hand, local officials (i.e. the agent) have more opportunities to engage in corruption with foreign firms, and should they decide that the private benefit of corruption is greater than that of promotion, they will prioritize foreign firms that bring bribes over those that have high spillover effects.
 
-The reason behind such difference in the preference of central and local governments is the fact that FDI projects are approved and managed at the provincial level. While the central law may be uniform in the book, its implementation varies widely across sub-national units in Vietnam \citep{Meyer2005}.\footnote{Vietnam's sub-national variation in implementation generalizes well to other cases, such as China \citep{Thun2006}} Therefore, provincial governments hold valuable services for sale to foreign firms. In contrast, the central government is more removed from direct contact with FDI firms and thus less likely to benefit from corruption than provincial leaders. 
+The reason behind such difference in the preference of central and local governments is the fact that FDI projects are approved and managed at the provincial level. While the central law may be uniform in the book, its implementation varies widely across sub-national units in Vietnam \citep{Meyer2005}.\footnote{Vietnam's sub-national variation in implementation generalizes well to other cases, such as China \citep{Thun2006}} Therefore, provincial governments hold valuable services for sale to foreign firms. In contrast, the central government is not in charge of approving FDI projects (except those few with national importance) and thus less likely to benefit from corruption than provincial leaders.
 
-In addition, the central government is much more concerned with overall economic growth, which is central to the longevity of the regime \citep{Malesky2008}. It wants to attract high-spillover FDI and uses promotion to reward local officials that accomplish this goal. On the other hand, each provincial leader is incentivized to free-ride on the developmental effort of other provinces and of the central to keep the entire regime stable. Therefore, local officials value the spillover effect of FDI only insofar as the opportunities for promotion that it brings.
+In addition, the central government is much more concerned with overall economic growth, which is central to the longevity of the regime \citep{Malesky2008}. It wants to attract high spillover FDI and uses promotion to reward local officials that accomplish this goal. On the other hand, each provincial leader is incentivized to free-ride on the developmental effort of other provinces and of the central to keep the entire regime stable. Therefore, local officials value the spillover effect of FDI only insofar as the opportunities for promotion that it brings.
 
 Fortunately for the central government, the principal-agent problem in this context is partially solved because monitoring is not too difficult. Indeed, the central government can observe the economic performance of the provinces and use personnel management to punish and reward provincial officials \citep{Sheng2007, Li2005}.\footnote{\citet{Shih2012} recently argue that economic performance does not matter to cadre promotion. However, they investigate all members of the Chinese Central Committee, including the central party apparatus, the army, and the central economic bureaucracy. These actors are not the important decision-makers in our theory.} Therefore, the principal-agent problem is only severe when provincial officials are not interested in further promotion to the central government, i.e. when the local official's time horizon is short. This suggests that there will be a variation in the level of FDI's spillover effect across provinces according to provincial officials' interest in promotion. In the research design, I use fuzzy regression discontinuity (RD) exploiting the mandated retirement age of Vietnamese officials, arguing that those that are in their last term have shorter time horizon and less interest in promotion.\footnote{The design is \textit{fuzzy} RD because the shortening of time horizon does not happen so abruptly as after a specific date. Instead, it happens in a time window after the official enters their last term before retirement.}
 
-By looking at this variation in the career interest of provincial officials, my theory contributes a fresh angle to the current literature on the relationship between decentralization and corruption. So far, scholars have only postulated a one-way relationship: either decentralization increases bribery \citep{Fan2009} or reduces it \citep{Guerra2009}. In my model, how decentralization affects corruption is conditional on the local officials' interest in the promotions offered by the central as carrots.
+By looking at this variation in the career interest of provincial officials, my theory contributes a fresh angle to the current literature on the relationship between decentralization and corruption. So far, scholars have only postulated a one-way relationship: either decentralization increases bribery \citep{Fan2009} or reduces it \citep{Guerra2009}. In my model, how decentralization affects corruption is conditional on the local officials' interest in the promotions offered by the central government as carrots.
 
 
 Three key assumptions in the theory above deserve further examination:
@@ -28,15 +28,13 @@ First, there is a large scholarship showing that authoritarian regimes are very 
 First, Vietnam's private sector was very small when FDI was first allowed into Vietnam. The size and the profitability of the average domestic firm is still smaller than those of foreign firms today. Therefore, there are both fewer rents and more coordination problems if provincial officials want to seek rents from domestic firms. Second, ironically, if officials want to grow the private sector for future rent-seeking, they must promote an enabling business environment that are free from rent-seeking. In contrast, engaging in corruption with large and existing FDI firms is much more convenient. Essentially, corrupt provincial officials have shifted the cost of building a thriving domestic sectors to the home countries of FDI firms and now extract rents from the high productivity and high profitability of these firms. 
 \end{enumerate}
 
-In sum, I propose a hypothesis about variation across Vietnam's provinces:
+In sum, I hypothesize that
 
-\begin{quote}
-Hypothesis: In provinces whose leaders are in their last term before the mandated retirement age, there are more spillover and less bribe from the foreign firms.
-\end{quote}
+\begin{hyp}
+In provinces whose leaders are in their last term before the mandated retirement age, there are less spillover and more bribes from the foreign firms.
+\end{hyp}
 
-The identification strategy is a fuzzy regression discontinuity with the last term before retirement serving as the break point.
-
-In addition, this project also attempts to measure the preference of the official directly with a survey conjoint analysis instead of relying on observed level of bribe and spillover. This design is important for my theory, in which the crucial causal mechanism is the utility calculation of provincial officials, which weighs between the developmental impact and the potential for bribes of FDI. It is difficult to fully examine this key step with only observational data because what officials truly want may not be fulfilled due to external factors and thus cannot be observed. Furthermore, what an official wants from a FDI firm is often hard to tease out completely. A big FDI firm is an attractive source of bribe, but it also brings job and technology. Indeed, perhaps this high correlation is precisely why it is so easy for officials to extract bribe from FDI under the guise of promoting economic development.
+In addition to the fuzzy RD design using term limit, this project also attempts to measure the preference of the official directly with a survey conjoint analysis instead of relying on the observed level of bribe and spillover. Indeed, it is difficult to fully examine the official's utility function with only observational data because what he truly wants may not be fulfilled due to external and unobservable factors. Furthermore, what an official wants from a FDI firm is often hard to tease out completely. A big FDI firm is an attractive source of bribe, but it also brings job and technology. Indeed, perhaps this high multicollinearity is precisely why it is so easy for officials to extract bribe from FDI under the guise of promoting economic development.
 
 To truly get at the utility calculation of provincial officials, I plan to conduct a survey experiment using conjoint analysis to ask provincial officials about their preference between two hypothetical FDI firms \citep{Hainmueller2014}. The characteristics of these firms will be randomly varied across several dimensions: size of labor force, capital, technology age, and most importantly, need for land, which proxies for corruption opportunities.
 
