--- a/writeup/roadmap.tex
+++ b/writeup/roadmap.tex
@@ -1,1 +1,1 @@
-In the next sections
+The proposal proceeds as follows. \Cref{sec:theory} introduces the model, including the actors, their choices, preferences, and constraints. \Cref{sec:research_design} discusses four empirical projects, each of which maps to a specific parameter in the theoretical model. Finally, \Cref{sec:time_line} describes the tentative time line for the dissertation.
