--- a/writeup/time_line.tex
+++ b/writeup/time_line.tex
@@ -1,23 +1,23 @@
-The prospectus currently has four projects in anticipation that at least one would not be completed and I will quickly move on to the others. I list the tentative time line below with an uncertainty estimate.
+The prospectus currently has four projects, anticipating that at least one would not be completed and I will quickly move on to the others. I list the tentative time line below with an uncertainty estimate.
 
 \subsection{Two-sided logit model}
 \begin{itemize}
 \item Obtain the PCI data (\textbf{done})
 \item Obtain the Bureau of Economic Analysis' (BEA) database of US FDI (\textbf{contacted Duke librarian and the BEA}). It solely depends on whether the BEA gives graduate student on-site access to the data (high uncertainty). \textbf{January 2016}
-\item Implement the EM algorithm for TSL model (high uncertainty, given that I'll code this up myself and complex models always have to possibility of not converging). \textbf{December 2016}
+\item Implement the EM algorithm for TSL model (high uncertainty, given that I'll code this up myself and EM models always have the possibility of not converging). \textbf{December 2016}
 \end{itemize}
 
 \subsection{Diff-in-Diff using OECD Anti-bribery convention}
 
 \begin{itemize}
 \item Obtain PCI data before and after the OECD ABC phase 3 enforcement. \textbf{done}
-\item Calculate spillover effect using Enterprise Census data (high uncertainty, given that I have not worked extensively with this dataset and that it needs a lot of merging to calculate vertical, i.e. inter-industry, spillover). \textbf{February 2016}
+\item Calculate spillover effect using Enterprise Census data (medium uncertainty, given that I have not worked extensively with this dataset and that it needs a lot of merging to calculate vertical, i.e. inter-industry, spillover). \textbf{February 2016}
 \item Analyze the data (low uncertainty, given the diff-in-diff design). Finish the chapter. \textbf{April 2016}
 \end{itemize}
 
 \subsection{Survey experiment in Vietnam}
 
-Given the nature of elite surveys, this project has the most uncertainties overall.
+Given the nature of elite surveys, this project has the most uncertainty overall.
 
 \begin{itemize}
 \item Contact local researchers to gauge the project's feasibility. \textbf{February 2016}
@@ -27,7 +27,7 @@ Given the nature of elite surveys, this project has the most uncertainties overa
 
 \subsection{Instrumental variable}
 \begin{itemize}
-\item Obtain World Bank Enterprise Survey data. \text{done}
+\item Obtain World Bank Enterprise Survey data. \textit{done}
 \item Obtain the BEA's data on FDI into the US. \text{contacted Duke librarian and the BEA}. This project depends on whether the BEA gives me on-site access to the confidential, firm-level data (high uncertainty). \textbf{January 2016}
 \item Create the instrumental variable by measuring spillover effect by sector for FDI in the US. \textbf{February 2017}
 \item Analyze and finish the chapter. \textbf{April 2017}
