--- a/writeup/rd_two_sided_matching.tex
+++ b/writeup/rd_two_sided_matching.tex
@@ -1,16 +1,16 @@
 \subsection{Two-sided logit (TSL) model}
 
-Designed to model the job market, the TSL is ``a two-sided approach explicitly combining models of employers' and workers' preferences, together with data on the characteristics or resources that each side values in the other, therefore provides an attractive and direct representation of the determinants of employment opportunity and choice.'' I will show how to frame the FDI investment location in this framework, where the firm chooses the official based on his endowment and the official chooses the firm based on its ability to deliver spillover and private benefits. Extending my previous model, the TSL allows the firm to be profit-maximizing instead of profit-satisficing. Furthermore, both sides are also strategic, taking into account not only their own preferences but also offers from the other sides \citep{Logan1996a}.
+As discussed in \Cref{sec:theory_actors_and_choices}, here I will extend my model to consider a strategic firm using the TSL model. Designed to study the job market, the TSL is ``a two-sided approach explicitly combining models of employers' and workers' preferences, together with data on the characteristics or resources that each side values in the other, therefore provides an attractive and direct representation of the determinants of employment opportunity and choice'' \citep[117]{Logan1996}. In this section, I show how to frame the FDI investment location in the TSL framework, where the firm chooses the official based on his endowment and the official chooses the firm based on its ability to deliver spillover and private benefits. Extending my model above, the TSL allows the firm to be profit-maximizing instead of profit-satisficing. Furthermore, both sides are also strategic, taking into account not only their own preferences but also offers from the other sides \citep{Logan1996a}.
 
-To use the TSL model, I first categorize officials according to the length of their time horizon. Then, for each category, I estimate the preference of the official for spillover versus private benefits. The hypothesis is that officials with a longer time horizon prefer spillover. The necessary data is which firm invest in which country and the relevant characteristics of firms and countries.
+To use the TSL model, I first categorize officials according to the length of their time horizon. Then, for each category, I estimate the preference of the official for spillover versus private benefits. The hypothesis is that officials with a longer time horizon prefer spillover. The data needed is a random sample of firms, what countries they invest in, and the relevant characteristics of firms and countries.
 
-In the following pages, \Cref{sec:tsl_actor_utility} specifies the actors' utility functions. \Cref{sec:tsl_estimate} discusses how the TSL model is derived from these utility functions and how it can be estimated. Finally, \Cref{sec:tsl_hypothesis} elaborates on the hypotheses and how to operationalize them for testing.
+In the following pages, \Cref{sec:tsl_actor_utility} specifies the actors' utility functions. \Cref{sec:tsl_estimate} discusses how the TSL model is derived from these utility functions and how it can be estimated. Finally, \Cref{sec:tsl_hypothesis} elaborates on the hypotheses regarding the effect of time horizon and how to operationalize them for testing.
 
-\subsubsection{The actors' utility function}
+\subsubsection{The actors' utility functions}
 \label{sec:tsl_actor_utility}
 
 
-Using the notation from \citet{Logan1998}, we consider the utility function of the two actors, the official and the firm. For the official $j$, the utility of having firm $i$ investing in his country is:\footnote{Since there is only one official in a country, in this section I will refer to country $j$ and official $j$ interchangeably.}
+Using the notation from \citet{Logan1998}, we consider the utility function of the two actors, the official and the firm. Since there is only one official in a country, in this section I will refer to country $j$ and official $j$ interchangeably. For the official $j$, the utility of having firm $i$ investing in his country is:
 
 \begin{align}
 U_j(i) &= \beta_j x_i + m_j + \epsilon_{1ij} \\
@@ -31,7 +31,7 @@ b_j &= \text{the baseline utility of official $j$ without any firm investing} \\
 \epsilon_{1ij}, \epsilon_{0ij} &= \text{unobserved components that influence official $j$'s utility}
 \end{align*}
 
-The official $j$ will evaluate each firm and then make an offer to firm $i$ to invest if $U_j(i) > U_j(\neg i)$. In our model, the relevant firm characteristics (i.e. $x_i$) that the official will consider are: the potential for spillover, private benefits, jobs, and capital. The corresponding $\beta$'s represent the official's preference for these characteristics. We are mainly interested in the $\beta$'s for spillover and private benefit.
+The official $j$ will evaluate each firm and then make an offer to firm $i$ to invest if $U_j(i) > U_j(\neg i)$. In our model, the relevant firm characteristics (i.e. $x_i$) that the official will consider are: the potential for spillover, private benefits, jobs, and capital. The corresponding $\beta$'s represent the official's preference for these characteristics. We are mainly interested in the $\beta$'s for spillover and private benefits.
 
 On the other side, for firm $i$, the utility of investing in country $j$ is:
 
@@ -58,7 +58,7 @@ We estimate the preference of firms and officials with a maximum likelihood esti
 L = \prod_{i,j: \text{i is matched with j}} Pr(A_{ij})
 \]
 
-where $Pr(A_{ij})$ is the probability of a specific match between firm $i$ and country $j$:
+where $Pr(A_{ij})$ is the probability of a specific match between firm $i$ and country $j$ and can be calculated as follows:
 
 \begin{align}
 &Pr(A_{ij}) \\
@@ -68,11 +68,11 @@ where $Pr(A_{ij})$ is the probability of a specific match between firm $i$ and c
 &\times \prod_{n \in \bar O_k, n > 0} \frac{1}{1 + \exp(\beta x_i)}
 \end{align}
 
-Here, the term $Pr(o_{ij} = 1)$ represents the probability that country $j$ makes an offer to firm $i$, through which the official's preference enters our estimation. On the other side, $Pr(A_{ij}) | S_{ik}$ is probability that firm $i$ will accept the offer from official $j$, \textit{given the offering set $O_k$}. The firm's preference is reflected in our estimation through this term.\footnote{The appendix shows how these terms are derived.}
+Here, the term $Pr(o_{ij} = 1)$ represents the probability that country $j$ makes an offer to firm $i$, through which the official's preference enters our estimation. On the other side, $Pr(A_{ij}) | S_{ik}$ is probability that firm $i$ will accept the offer from official $j$, given the offering set $O_k$. The firm's preference is reflected in our estimation through this term.\footnote{The appendix shows how these terms are derived.}
 
-It is important to note that the offering set $O_k$ contains all offers that firm $i$ receives, only one of which is the observed match between firm $i$ and country $j$. The intuition is that if we observe the full set of offers that all officials make to all firms, then by looking at the final match we can see how firms and officials reject inferior offers and thus deduce their preferences.
+It is important to note that the offering set $O_k$ contains \textit{all} offers that firm $i$ receives, only one of which is the observed match between firm $i$ and country $j$. The intuition is that if we observe the full set of offers that all officials make to all firms, then by looking at the final match we can see how firms and officials reject inferior offers and thus deduce their preferences.
 
-However, since the observed data only contains the final match, there is no information about the offers that firm $i$ receives but rejects, leading to the problem of incomplete data. To maximize the likelihood with incomplete data, we use the Expectation-Maximization (EM) algorithm, which runs as follows. First, we assume some arbitrary values for the parameters representing the actors' preference. Second, given these preferences, we fill in the missing data, i.e. the offers that we do not observe. After this step, we now have the full set of offers and can estimate the actors' preference again. These two steps constitute one iteration of the EM algorithm, which we repeat many times. 
+However, since the observed data only contains the final match, there is no information about the offers that firm $i$ receives but rejects, leading to the problem of incomplete data. To maximize the likelihood with incomplete data, we use the Expectation-Maximization (EM) algorithm, which runs as follows. First, we assume some arbitrary values for the parameters representing the actors' preferences. Second, given these preferences, we fill in the missing data, i.e. the offers that we do not observe. After this step, we now have the full set of offers and can estimate the actors' preferences again. These two steps constitute one iteration of the EM algorithm, which we repeat many times. 
 
 Under certain regularity conditions, met by the TSL, the EM algorithm is proven to increase the likelihood after each iteration \citep[152]{Logan1998}. We stop the algorithm when the likelihood no longer increases and keep the final set of parameter estimates.
 
@@ -81,7 +81,7 @@ Depending on the starting values of the parameters, the EM algorithm may get stu
 \subsubsection{Hypothesis and Operationalization}
 \label{sec:tsl_hypothesis}
 
-As before, I hypothesize that an official with a longer time horizon would prefer spillover over private benefits. First, I exploit the variation in time horizon among democratic governments, operationalized as the level of institutionalization of the party in power. Highly institutionalized parties are long-lasting and encompass multiple generations of politicians. Since the young generation of politicians have their entire career attached to the party label, they have a long time horizon and consider the long-term effect of the party's policy. Therefore, they are likely to pressure or bribe their senior colleagues, i.e. those with short time horizon, into choosing FDI based on its spillover effect. In contrast, weakly institutionalized parties tend to be short-lived, unable to attract young politicians, and thus have a short time horizon.\footnote{Making a similar argument, \citet{Blake2013} shows that highly institutionalized parties sign less rigid bilateral investment treaties because they want to maintain flexibility in case conditions change during their long future reign.} Therefore, I hypothesize that:
+As before, I hypothesize that an official with a longer time horizon would prefer spillover over private benefits. First, I exploit the variation in time horizon among democratic governments, operationalized as the level of institutionalization of the party in power. Highly institutionalized parties are long-lasting and encompass multiple generations of politicians. Since the young generation of politicians have their entire career attached to the party label, they have a long time horizon and consider the long-term effect of the government's policy. Therefore, they are likely to pressure or bribe their senior colleagues, i.e. those with short time horizon, into choosing FDI based on its spillover effect. In contrast, weakly institutionalized parties tend to be short-lived, unable to attract young politicians, and thus have a short time horizon.\footnote{Making a similar argument, \citet{Blake2013} shows that highly institutionalized parties sign less rigid bilateral investment treaties because they want to maintain flexibility in case conditions change during their long future reign.} Therefore, I hypothesize that:
 
 \begin{hyp}
 Democratic governments ruled by highly institutionalized parties prefer FDI with spillover more than those ruled by weakly institutionalized parties.
@@ -89,7 +89,7 @@ Democratic governments ruled by highly institutionalized parties prefer FDI with
 
 I operationalize party institutionalization with the age of party, as measured by the Database of Political Institutions \citep{Keefer2002}. In a presidential system, I consider the president's party to the party in power.
 
-First, I exploit the variation in time horizon among autocratic governments, operationalized as the probability of staying in power. Unlike democracies, autocracies only have infrequent, if not violent, removal of leaders, leaving little chance for the political losers to regain office. Therefore, once the probability of staying in power is small, the leader's time horizon is severely shorted. I hypothesize that:
+Second, I exploit the variation in time horizon among autocratic governments, operationalized as the probability of staying in power. Unlike democracies, autocracies only have infrequent, if not violent, removal of leaders, leaving little chance for the political losers to regain office. Therefore, once the probability of staying in power becomes small, the leader's time horizon is severely shortened. I hypothesize that:
 
 \begin{hyp}
 Autocratic regimes with higher probabilities of staying in power prefer FDI with high spillover.
